--- a/share/steam-skin-manager/help/assets/styles.css
+++ b/share/steam-skin-manager/help/assets/styles.css
@@ -47,7 +47,7 @@ ul#menu li {
 	margin: 5px;
 	padding: 20px;
 	width: 200px;
-	height: 200px;
+	height: 150px;
 	text-align: left;
 	color: #333;
 	background-color: #eee;
@@ -59,11 +59,13 @@ ul#menu li:hover {
 	box-shadow: 0 0 2px #8ac;
 }
 
+ul#menu li.altered {
+	box-shadow: 0 0 1px #ccc;
+}
+
 ul#menu li.altered:hover {
-	margin: 2px 5px 8px 5px;
-	padding-bottom: 14px;
-	border-bottom: 6px solid #efefef;
-	transition: all 0.25s;
+	padding-bottom: 0px;
+	border-bottom: 20px solid #fff;
 }
 
 ul#menu li h2 {
