--- a/share/steam-skin-manager/ui.glade
+++ b/share/steam-skin-manager/ui.glade
@@ -341,7 +341,9 @@
                       <object class="GtkLabel" id="default_theme_label">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="halign">end</property>
+                        <property name="halign">start</property>
+                        <property name="margin_left">2</property>
+                        <property name="margin_right">2</property>
                         <property name="label" translatable="yes">Pick one of the preinstalled themes:</property>
                       </object>
                       <packing>
@@ -509,6 +511,8 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="halign">end</property>
+                        <property name="margin_left">2</property>
+                        <property name="margin_right">2</property>
                         <property name="label" translatable="yes">&lt;i&gt;The later selection has a priority.&lt;/i&gt;</property>
                         <property name="use_markup">True</property>
                         <property name="justify">center</property>
@@ -538,7 +542,9 @@
                       <object class="GtkLabel" id="selectfolderlabel">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="halign">end</property>
+                        <property name="halign">start</property>
+                        <property name="margin_left">2</property>
+                        <property name="margin_right">2</property>
                         <property name="label" translatable="yes">To apply your own theme, please select its folder:</property>
                         <property name="use_markup">True</property>
                       </object>
